# psat-api-python

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
example/: example.py
psat_api/: Client.py  Region.py  Reports.py  Version.py  __init__.py
psat_api/common/: AssignmentStatus.py  EnrollmentStatus.py  Region.py  __init__.py
psat_api/reports/: CyberStrength.py  Enrollments.py  PhishAlarm.py  Phishing.py  Reports.py  Training.py  Users.py  __init__.py
psat_api/v1/: Client.py  __init__.py
psat_api/v1/filters/: CyberStrengthFilter.py  EnrollmentsFilter.py  PhishAlarmFilter.py  PhishingFilter.py  TrainingFilter.py  UsersFilter.py  __init__.py
psat_api/v1/reports/: CyberStrength.py  Enrollments.py  PhishAlarm.py  Phishing.py  Reports.py  Training.py  Users.py  __init__.py
psat_api/v2/: Client.py  __init__.py
psat_api/v2/filters/: CyberStrengthFilter.py  EnrollmentsFilter.py  PhishAlarmFilter.py  PhishingFilter.py  TrainingFilter.py  UsersFilter.py  __init__.py
psat_api/v2/reports/: CyberStrength.py  Enrollments.py  PhishAlarm.py  Phishing.py  Reports.py  Training.py  Users.py  __init__.py
psat_api/v3/: Client.py  __init__.py
psat_api/v3/filters/: CyberStrengthFilter.py  EnrollmentsFilter.py  PhishAlarmFilter.py  PhishingExtendedFilter.py  PhishingFilter.py  TrainingFilter.py  UsersFilter.py  __init__.py
psat_api/v3/reports/: CyberStrength.py  Enrollments.py  PhishAlarm.py  Phishing.py  PhishingExtended.py  Reports.py  Training.py  Users.py  __init__.py
psat_api/web/: ClientBase.py  ClientGeneric.py  CollectionPage.py  ErrorHandler.py  FilterOptions.py  PageIterator.py  Resource.py  __init__.py
src/psat_api/common/: AssignmentStatus.py  Region.py  Version.py  __init__.py  assignment_status.py  enrollment_status.py  region.py  version.py
src/psat_api/v1/: Client.py  __init__.py
src/psat_api/v1/filters/: CyberStrengthFilter.py  EnrollmentsFilter.py  PhishAlarmFilter.py  PhishingFilter.py  TrainingFilter.py  UsersFilter.py  __init__.py
src/psat_api/v1/reports/: CyberStrength.py  Enrollments.py  PhishAlarm.py  Phishing.py  Reports.py  Training.py  Users.py  __init__.py
src/psat_api/v2/: Client.py  __init__.py
src/psat_api/v2/filters/: CyberStrengthFilter.py  EnrollmentsFilter.py  PhishAlarmFilter.py  PhishingFilter.py  TrainingFilter.py  UsersFilter.py  __init__.py
src/psat_api/v2/reports/: CyberStrength.py  Enrollments.py  PhishAlarm.py  Phishing.py  Reports.py  Training.py  Users.py
src/psat_api/v3/: Client.py  __init__.py  client.py
src/psat_api/v3/filters/: CyberStrengthFilter.py  EnrollmentsFilter.py  PhishAlarmFilter.py  PhishingExtendedFilter.py  PhishingFilter.py  TrainingFilter.py  UsersFilter.py  __init__.py  cyber_strength_filter.py  enrollments_filter.py  phish_alarm_filter.py  phishing_extended_filter.py  phishing_filter.py  training_filter.py  users_filter.py
src/psat_api/v3/reports/: CyberStrength.py  Enrollments.py  PhishAlarm.py  Phishing.py  PhishingExtended.py  Reports.py  Training.py  Users.py  __init__.py  cyber_strength.py  enrollments.py  phish_alarm.py  phishing.py  phishing_extended.py  reports.py  training.py  (+1 more)
src/psat_api/web/: ClientBase.py  ClientGeneric.py  ErrorHandler.py  FilterOptions.py  PageIterator.py  Resource.py  __init__.py  client_base.py  client_generic.py  filter_options.py  page_iterator.py  resource.py
