[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = "setuptools.build_meta"

[tools.setuptools.packages.find]
where = ["src"]
include = ["psat_api"]

namespaces = true

[project]
name = "psat-api"
version = "3.1.0"
readme = "README.md"
description = "Proofpoint Security Awareness Training Python API Package"
license = { text = "MIT" }
requires-python = ">3.9"
dependencies = [
    'requests',
    'pysocks'
]

[project.urls]
repository = "https://github.com/pfptcommunity/psat-api-python"
homepage = "https://www.proofpoint.com/us/products/security-awareness-training"
documentation = "https://proofpoint.securityeducation.com/api/reporting/documentation"
#changelog = "https://github.com/pfptcommunity/psat-api-python"
