[metadata]
name = psat-api
version = 0.1.1
license = MIT
author = Proofpoint
author_email = feedback@proofpoint.com
maintainer = Ludvik Jerabek
maintainer_email = feedback@proofpoint.com
url = https://github.com/pfptcommunity/psat-api-python
description= Proofpoint Security Awareness Training Python API Package

[options]
zip_safe = False
include_package_data = False
packages =
    psat_api
    psat_api.web
    psat_api.reports
python_requires = >= 3.9
install_requires =
    requests